crates/escalier_parser/src/snapshots/escalier_parser__lexer__tests__lex_jsx_element_with_text_and_exprs.snap
---
source: crates/escalier_parser/src/lexer.rs
expression: jsx_elem
---
JSXElement {
    opening: JSXOpeningElement {
        name: Ident(
            Ident {
                name: "h1",
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
            },
        ),
        attrs: [],
        self_closing: false,
    },
    children: [
        Text(
            JSXText {
                value: "Hello, ",
            },
        ),
        ExprContainer(
            JSXExprContainer {
                expr: Expr {
                    kind: Identifier(
                        "name",
                    ),
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 17,
                        },
                    },
                },
            },
        ),
        Text(
            JSXText {
                value: "!",
            },
        ),
    ],
    closing: Some(
        JSXClosingElement {
            name: Ident(
                Ident {
                    name: "h1",
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 21,
                        },
                        end: Position {
                            line: 1,
                            column: 23,
                        },
                    },
                },
            ),
        },
    ),
}
