crates/escalier_parser/src/snapshots/escalier_parser__lexer__tests__lex_nested_template_strings.snap
---
source: crates/escalier_parser/src/lexer.rs
expression: "tokens[0].kind"
---
StrTemplateLit {
    parts: [
        Token {
            kind: StrLit(
                "a",
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
        },
        Token {
            kind: StrLit(
                "",
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 14,
                },
                end: Position {
                    line: 1,
                    column: 15,
                },
            },
        },
    ],
    exprs: [
        Expr {
            kind: Identifier(
                "b",
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 5,
                },
                end: Position {
                    line: 1,
                    column: 6,
                },
            },
        },
    ],
}
