crates/escalier_parser/src/snapshots/escalier_parser__lexer__tests__lex_nested_template_strings_complex.snap
---
source: crates/escalier_parser/src/lexer.rs
expression: "tokens[0].kind"
---
StrTemplateLit {
    parts: [
        Token {
            kind: StrLit(
                "ids = ",
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
        },
        Token {
            kind: StrLit(
                "",
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 51,
                },
                end: Position {
                    line: 1,
                    column: 52,
                },
            },
        },
    ],
    exprs: [
        Expr {
            kind: Call {
                args: [
                    Expr {
                        kind: Function {
                            params: [
                                FuncParam {
                                    pattern: Pattern {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 1,
                                                column: 22,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 24,
                                            },
                                        },
                                        kind: Ident(
                                            BindingIdent {
                                                name: "id",
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 1,
                                                        column: 22,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 24,
                                                    },
                                                },
                                                mutable: false,
                                            },
                                        ),
                                    },
                                    type_ann: None,
                                    optional: false,
                                },
                            ],
                            body: Expr(
                                Expr {
                                    kind: TemplateLiteral {
                                        parts: [
                                            String(
                                                "x",
                                            ),
                                            String(
                                                "",
                                            ),
                                        ],
                                        exprs: [
                                            Expr {
                                                kind: Identifier(
                                                    "id",
                                                ),
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 1,
                                                        column: 33,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 35,
                                                    },
                                                },
                                            },
                                        ],
                                    },
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 1,
                                            column: 29,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 37,
                                        },
                                    },
                                },
                            ),
                            type_ann: None,
                        },
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 18,
                            },
                            end: Position {
                                line: 1,
                                column: 37,
                            },
                        },
                    },
                ],
                callee: Expr {
                    kind: Member {
                        object: Expr {
                            kind: Identifier(
                                "ids",
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 10,
                                },
                                end: Position {
                                    line: 1,
                                    column: 13,
                                },
                            },
                        },
                        property: Expr {
                            kind: Identifier(
                                "map",
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 14,
                                },
                                end: Position {
                                    line: 1,
                                    column: 17,
                                },
                            },
                        },
                    },
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 10,
                        },
                        end: Position {
                            line: 1,
                            column: 17,
                        },
                    },
                },
            },
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 10,
                },
                end: Position {
                    line: 1,
                    column: 38,
                },
            },
        },
    ],
}
