crates/escalier_parser/src/snapshots/escalier_parser__lexer__tests__lex_template_string.snap
---
source: crates/escalier_parser/src/lexer.rs
expression: "tokens[0].kind"
---
StrTemplateLit {
    parts: [
        Token {
            kind: StrLit(
                "abc",
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 6,
                },
            },
        },
    ],
    exprs: [],
}
